Fix some easy sonarlint warnings